# random-stuff

./: .gitignore
confs/: Xresources  airline-dracula-theme.el  alacritty.yml  config.fish  emacs  i3.conf  nvim.config  picom.conf  polybar  xmonad-session-rc  xmonad.hs
free-monads-talk/: README.md  free-monads-talk.cabal
free-monads-talk/slides/: free-monads.md
free-monads-talk/src/: Derived.hs  Main.hs  Raw.hs
wallpaper/: Cargo.toml  README.md
wallpaper/src/: cli.rs  img.rs  main.rs  noise_field.rs  noise_functions.rs  utils.rs
xmonad-talk/: xmonad-talk.md
