[package]
name = "wallpaper-noise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
colorgrad = "0.6.2"
image = "0.24.5"
noise = "0.8.2"
rand = "0.8.5"
